syntax = "proto3";

package cloud.kms.streamingcrypto.metadata;

option go_package = "a.yandex-team.ru/cloud/kms/streamingcrypto/proto/metadata;metadata";

message CryptoMetadata {
    oneof data {
        DefaultMetadata defaultMetadata = 1;
        CustomKeyMetadata customKeyMetadata = 2;
    }
}

message DefaultMetadata {
    int32 chunkSize = 1;
    int32 tagSize = 2;
    int64 plaintextSize = 3;
    Algorithm algorithm = 4;
    Hkdf hkdf = 5;
    string keyId = 6;
    bytes salt = 7;
    bytes noncePrefix = 9;
}

message CustomKeyMetadata {
    int32 chunkSize = 1;
    int32 tagSize = 2;
    int64 plaintextSize = 3;
    Algorithm algorithm = 4;
    Hkdf hkdf = 5;
    string keyId = 6;
    bytes salt = 7;
    bytes eikm = 8;
    bytes noncePrefix = 9;
}

enum Algorithm {
    AES128_GCM = 0;
    AES256_GCM = 1;
    CHACHA20_POLY1305 = 2;
}

enum Hkdf {
    SHA_256 = 0;
}
